fix: content display on mobile views

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -91,6 +91,10 @@
   font-weight: bold;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .timeline {
   position: relative;
 }
